[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roio-lite"
version = "1.0.0"
authors = [
  { name="Paco Li Junting", email="paco.li@intedigo.com" },
]
description = "RoIO Lite SDK for Intedigo Robot System"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/PacoLijt/roio-lite"
"Bug Tracker" = "https://github.com/PacoLijt/roio-lite/issues"
